--- a/src/styles/components/ToDoCards.scss
+++ b/src/styles/components/ToDoCards.scss
@@ -7,13 +7,6 @@ button {
   margin-left: 3px;
 }
 
-.ToDo {
-  background-color: rgb(161, 150, 150);
-  height: 100vh;
-}
-.ToDo__columns {
-  display: inline-flex;
-}
 .ToDo__column {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans,
     Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
@@ -52,6 +45,7 @@ button {
   display: block;
   margin-top: 10px;
   margin-right: 10px;
+  margin-left: 20px;
   text-decoration: none;
   text-align: left;
 }
@@ -96,8 +90,9 @@ button {
   border: 1px solid rgb(207, 205, 205);
   cursor:grabbing;
   height: auto;
-  opacity: 0.5;
-  transform: scaleY(1.2) rotate(2deg);
+  opacity: 0.2;
+  transform: scaleY(1.1) rotate(1deg);
+  display: hidden;
 
 
 }
@@ -105,10 +100,9 @@ button {
   display: flex;
   justify-content: center;
 }
-.ToDo__input {
-  margin-right: 5px;
-}
+
 .ToDo__input__text {
+  margin-right: 5px;
   border: 0;
   border-radius: 3px;
   background-color: #f4f5f7;
