--- a/src/styles/pages/notFound.scss
+++ b/src/styles/pages/notFound.scss
@@ -12,10 +12,16 @@ body {
   width: 100%;
   text-align: center;
 
+  &__logo {  
+    margin-left: 30px;
+    height: 40px;
+    display: flex;
+  }
+
   &__error {
     color: #0a0a0a;
     width: 80%;
-    margin: 10px auto;
+    margin: 30px auto;
     font-family: $font;
     font-size: 50px;
   }
@@ -25,7 +31,7 @@ body {
     font-size: 5.5rem;
     font-family: $font;
     font-weight: 600;
-    top: 13rem;
+    top: 17rem;
     color: rgb(0, 0, 0);
   }
 
@@ -84,7 +90,7 @@ body {
     font-size: 5.5rem;
     font-family: $font;
     font-weight: 600;
-    top: 8rem;
+    top: 14rem;
     color: rgb(0, 0, 0);
   }
 }
