--- a/src/styles/components/ToDoCards.scss
+++ b/src/styles/components/ToDoCards.scss
@@ -77,9 +77,16 @@ button {
   margin-top: 5px;
   margin-left: 0px;
   padding-left: 0px;
-  border: 1px solid rgb(207, 205, 205);
   cursor:-webkit-grab;
   height: auto;
+  box-shadow:
+  1.6px 1.4px 2px -6px rgba(0, 0, 0, 0.051),
+  3.8px 3.5px 4.7px -6px rgba(0, 0, 0, 0.073),
+  7.1px 6.5px 8.9px -6px rgba(0, 0, 0, 0.09),
+  12.7px 11.6px 15.9px -6px rgba(0, 0, 0, 0.107),
+  23.8px 21.7px 29.7px -6px rgba(0, 0, 0, 0.129),
+  57px 52px 71px -6px rgba(0, 0, 0, 0.18)
+;
 }
 .sortable-chosen{
   border-radius: 3px;
@@ -91,7 +98,7 @@ button {
   cursor:grabbing;
   height: auto;
   opacity: 0.8;
-  transform:  rotate(4deg);
+  transform:  rotate(1deg);
 }
 .sortable-drag {
   border-radius: 3px;
@@ -102,13 +109,19 @@ button {
   border: 1px solid rgb(207, 205, 205);
   cursor:grabbing;
   height: auto;
-  opacity: 1;
-  transform:  rotate(4deg);
+  opacity: 0.1;
+  transform:  rotate(1deg);
 }
 .sortable-ghost {
-  color: transparent;
-  background-color: rgb(235, 235, 235);
-  transform:  rotate(0deg);
+  border-radius: 3px;
+  background-color: rgb(196, 196, 196);
+  margin-top: 5px;
+  margin-left: 0px;
+  padding-left: 0px;
+  border: 1px solid rgb(207, 205, 205);
+  cursor:grabbing;
+  height: auto;
+  opacity: 0.5;
 }
 .ToDo__delete {
   display: flex;
@@ -121,7 +134,21 @@ button {
   border-radius: 3px;
   background-color: #f4f5f7;
 }
+
 .ToDo__input__text:hover {
   transition-duration: 0.4s;
   background-color: #e2dce9;
+}
+
+.ToDo__DragImg {
+  display: flex;
+  margin-top: 10px;
+  margin-right: 10px;
+  justify-content: right;
+}
+
+.columns__handler{
+height: 20px;
+width: 20px;
+cursor:-webkit-grab;
 }
