--- a/src/styles/pages/mainboard.scss
+++ b/src/styles/pages/mainboard.scss
@@ -90,7 +90,7 @@
     color: white;
   }
 
-  .colums {
+  .columns {
     background-color: rgb(82, 164, 212);
     margin: 10px 10px;
     border-radius: 5px;
