--- a/src/styles/components/ToDoCards.scss
+++ b/src/styles/components/ToDoCards.scss
@@ -152,3 +152,7 @@ height: 20px;
 width: 20px;
 cursor:-webkit-grab;
 }
+
+.ToDo__AddButton, .ToDo__DeleteButton, .ToDo__Checkbox {
+  cursor: pointer;
+}
