recover title list placeholder

--- a/src/styles/components/ToDoCards.scss
+++ b/src/styles/components/ToDoCards.scss
@@ -36,7 +36,8 @@ button {
 
 .ToDo__listTitle__input::placeholder {
   color: white;
-  font-size: 20px;
+  font-size: 10px;
+  font-style: italic;
 }
 
 .ToDo__cards {
